--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -9,7 +9,8 @@
   flex-direction: row;
   justify-content: space-between; */
   display: grid;
-  grid-template-columns: 1.7fr 1fr;
+  /* grid-template-columns: 1.7fr 1fr; */
+  grid-template-columns: repeat(2, 1fr);
   column-gap: 79px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
@@ -103,7 +104,7 @@
   width: 33% !important;
   position: fixed;
   top: 0;
-  right: -52px;
+  right: 30px;
 }
 
 .secondBlock {
