--- a/styles/globals.css
+++ b/styles/globals.css
@@ -263,7 +263,7 @@
 .clock {
   font-family: "ABC Walter Alte";
   font-style: normal;
-  font-weight: 500;
+  font-weight: bolder;
   font-size: 14px;
   line-height: 100%;
   text-decoration-line: underline;
