--- a/styles/ProjectIndex.module.css
+++ b/styles/ProjectIndex.module.css
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.projectIndexMain a{
+  text-decoration: none;
+}
+
 .projectIndexBlock {
   display: grid;
   /* grid-template-columns: 1.7fr 1fr; */
