--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -113,7 +113,7 @@
 .worksRowBlock1 {
   /* background-color: aqua; */
   display: flex;
-  column-gap: 79px;
+  column-gap: 100px;
 }
 
 .worksRowBlock2 {
@@ -132,12 +132,14 @@
 }
 
 .worksBlock1 {
+  /* width: fill-available;
+  width: -webkit-fill-available; */
 }
 
-.worksBlock2 {
+/* .worksBlock2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); */
+  width: 100%;
 }
 
 .worksBlock2 .figure:first-child {
@@ -153,6 +155,38 @@
 .worksBlock5,
 .worksBlock6 {
   grid-area: 2;
+} */
+
+.worksBlock2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: space-between;
+}
+
+/* .worksBlock2 .figure:first-child {
+  display: flex;
+  flex-direction: column;
+}
+
+.worksBlock2 .figure:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+} */
+
+.worksBlock2Row1{
+  align-self: flex-start;
+}
+
+.worksBlock2Row2{
+  align-self: flex-end;
+
+}
+
+.worksBlock4,
+.worksBlock5,
+.worksBlock6 {
+  grid-area: 2;
 }
 
 .figure {
@@ -162,6 +196,41 @@
   color: black;
   cursor: pointer;
   text-decoration: none;
+}
+
+.aspect1_1 {
+  aspect-ratio: auto 1 / 1;
+}
+
+.aspect4_5 {
+  aspect-ratio: auto 4 / 5;
+}
+
+.aspect16_9 {
+  aspect-ratio: auto 16 / 9;
+}
+
+.figure-1 {
+  background-image: url("../public/clientsImg/altiva1_copy.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 712px;
+  height: 815px;
+}
+
+.figure-2 {
+  background-image: url("../public/clientsImg/nikeHanging.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 640px;
+}
+
+.figure-3 {
+  background-image: url("../public/clientsImg/RL_A_Type_Layered_RLWEB.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-self: flex-end;
+  width: 420px;
 }
 
 .figure p span:first-child {
@@ -260,7 +329,6 @@
   grid-area: 1 / 2;
 }
 
-
 /* clock */
 
 .clock {
@@ -275,113 +343,27 @@
   left: 120px;
 }
 
+/* Sliding text */
 
-
-
-/* :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
+.marquee {
+  bottom: -100px;
+  position: relative;
+  max-width: 100%;
   overflow-x: hidden;
+  height: 45px;
+  border: 1px solid #000000;
+  display: flex;
+  align-items: center;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.track {
+  position: absolute;
+  white-space: nowrap;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.track > span {
+  font-size: 18px;
+  font-family: SuisseIntl-Regular;
+  padding-left: 30px;
+  padding-top: 5px;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
