--- a/frontend/styles/Studio.module.css
+++ b/frontend/styles/Studio.module.css
@@ -20,7 +20,7 @@
   z-index: -1;
   top: -130px;
   left: 0;
-  background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(124,130,255,1) 100%);
+  /* background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(124,130,255,1) 100%); */
 }
 
 .threedbg canvas {
