--- a/frontend/styles/Navbar.module.css
+++ b/frontend/styles/Navbar.module.css
@@ -11,11 +11,13 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 500ms;
   z-index: 1;
-  margin: 15px;
+  /* margin: 15px; */
+  padding: 15px;
+  /* background: #FC2121; */
 }
 
 .navbar.down {
-  top: -3rem;
+  top: -4rem;
 }
 
 .navbar span {
@@ -32,12 +34,12 @@
 }
 
 .navbar span:hover {
-  color: #0029ff;
+  color: var(--globalRed);
 }
 
 .navbar span:nth-child(2) {
   padding-right: 10px;
-  color: #0029ff;
+  color: var(--globalRed);
 }
 
 .navbar a {
@@ -61,4 +63,56 @@
   width: 40px;
   display: block;
   background-repeat: no-repeat;
+}
+
+.navMobileLeftBlock {
+  display: none;
+  /* display: flex;
+  justify-content: flex-start;
+  align-items: center; */
+}
+
+.navMobileRightBlock {
+  display: none;
+  /* display: flex;
+  justify-content: flex-end;
+  align-items: center; */
+}
+
+.navMobileMenu {
+  width: 100%;
+  background-color: white;
+  height: 210px;
+  position: fixed;
+  top: 75px;
+  padding: 15px;
+  right: -30px;
+}
+
+.navMobileMenu ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  row-gap: 50px;
+}
+
+
+@media (width < 600px) {
+  .navLeftBlock, .navRightBlock{
+    display: none;
+  }
+
+  .navMobileLeftBlock {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .navMobileRightBlock {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
