--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -3,9 +3,19 @@
   src: url("../public/fonts/SuisseIntl-Regular.ttf");
 }
 
+:root {
+  --globalBlue: #0029ff;
+  --globalRed: #FC2121;
+}
+
+
 * {
   padding: 0;
   margin: 0;
+}
+
+body {
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -20,12 +30,12 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #0029ff;
+  background: var(--globalRed);;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #0029ff;
+  background: var(--globalRed);;
 }
 
 .fade-in-section:not(:first-child) {
@@ -45,14 +55,12 @@
   width: 100%;
   height: 300vh;
   background-color: white;
-  /* background-color: #0f0f0f; */
   display: flex;
 }
 
 .titleTwo {
   font-family: SuisseIntl-Regular;
   color: #1a1a1a;
-  /* color: white; */
   letter-spacing: 0.01em;
   line-height: 1.3;
   font-weight: 500;
@@ -72,7 +80,6 @@
 }
 
 .leftMainDiv {
-  /* background-color: greenyellow; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,7 +89,6 @@
 }
 
 .rightMainDiv {
-  /* background-color: blueviolet; */
   height: 100vh;
   width: 50%;
   /* margin-top: 50vh; */
@@ -90,8 +96,6 @@
 }
 
 .rightMainDiv canvas {
-  /* margin-top: 50vh; */
-  /* border: 1px solid black; */
   padding-top: 0 !important;
   z-index: 1 !important;
   position: relative;
@@ -103,25 +107,17 @@
 
 .worksGrid {
   display: grid;
-  /* grid-template-rows: 810px 500px 766px; */
   grid-template-rows: repeat(3, auto);
-  /* grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); */
   grid-row-gap: 100px;
   padding-bottom: 100px;
 }
 
-.worksRowBlock1, .worksRowBlock2, .worksRowBlock3{
-  margin: 5px;
-}
-
 .worksRowBlock1 {
-  /* background-color: aqua; */
   display: flex;
   column-gap: 100px;
 }
 
 .worksRowBlock2 {
-  /* background-color: aquamarine; */
   display: flex;
   column-gap: 80px;
   flex-direction: row;
@@ -130,7 +126,6 @@
 }
 
 .worksRowBlock3 {
-  /* background-color: chocolate; */
   display: flex;
   justify-content: flex-end;
 }
@@ -181,13 +176,12 @@
   flex-direction: column;
 } */
 
-.worksBlock2Row1{
+.worksBlock2Row1 {
   align-self: flex-start;
 }
 
-.worksBlock2Row2{
+.worksBlock2Row2 {
   align-self: flex-end;
-
 }
 
 .worksBlock4,
@@ -233,7 +227,8 @@
   width: 336px;
 }
 
-.figure-5, .figure-6 {
+.figure-5,
+.figure-6 {
   width: 400px;
 }
 
@@ -271,7 +266,6 @@
 .worksDetailsMainDiv {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* grid-column-gap: 20px; */
   column-gap: 79px;
   margin: 0 15px 0 15px;
   border-top: 1px solid black;
@@ -338,12 +332,11 @@
 }
 
 .worksDetailsRight {
-  /* background-color: rosybrown; */
   grid-area: 1 / 2;
   border-bottom: 1px solid black;
 }
 
-.workDetailsRightButtons{
+.workDetailsRightButtons {
   display: flex;
   justify-content: space-between;
   padding-bottom: 27px;
@@ -361,7 +354,7 @@
   font-weight: 500;
   font-size: 26px;
   line-height: 100%;
-  color: #2151FC;
+  color: var(--globalRed);
   background-color: transparent;
   border: none;
   text-decoration: none;
@@ -384,10 +377,9 @@
   font-size: 12px;
   line-height: 100%;
   text-align: right;
-  
+
   color: #000000;
 }
-
 
 /* clock */
 
@@ -431,22 +423,52 @@
 /* Loader */
 .classic-2 {
   position: absolute;
-    top: 60%;
-    left: 45vw;
-    z-index: 10;
+  top: 60%;
+  left: 45vw;
+  z-index: 10;
   font-weight: bold;
   font-family: sans-serif;
   font-size: 30px;
   padding-bottom: 8px;
-  background:linear-gradient(currentColor 0 0) bottom left/0% 3px no-repeat;
-  animation:c2 2s linear infinite;
+  background: linear-gradient(currentColor 0 0) bottom left/0% 3px no-repeat;
+  animation: c2 2s linear infinite;
 }
-@keyframes c2 {to{background-size: 100% 3px}}
-
-
+@keyframes c2 {
+  to {
+    background-size: 100% 3px;
+  }
+}
 
 /* Media Queries */
 
-@media only screen and (max-width: 600px) {
-  
+@media only screen and (max-width: 900px) {
+  .worksRowBlock1,
+  .worksRowBlock2,
+  .worksRowBlock3 {
+    flex-direction: column;
+  }
+
+  .worksBlock2 a:nth-child(2) {
+    align-self: flex-start;
+  }
+
+  .figure-1, .figure-2, .figure-3, .figure-4, .figure-5, .figure-6, .figure-7 {
+    width: 100vw;
+  }
+
+  .clock{
+    left: 0;
+  }
 }
+
+@media only screen and (max-width: 840px) {
+  .marquee{
+    /* left: 10px; */
+    width: 105vw;
+    max-width: 105vw;
+  }
+}
+
+/* @media only screen and (max-width: 700px) {
+  
+} */
