--- a/frontend/styles/About.module.css
+++ b/frontend/styles/About.module.css
@@ -1,7 +1,13 @@
 .mainDiv {
   width: 100%;
   /* background: linear-gradient(0deg, rgba(255,255,255,1) 90%, rgba(252,33,33,1) 100%); */
-  background: linear-gradient(0deg, rgba(255,255,255,1) 74%, rgba(253,107,107,1) 85%, rgba(252,33,33,1) 95%, rgba(255,255,255,1) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 74%,
+    rgba(253, 107, 107, 1) 85%,
+    rgba(252, 33, 33, 1) 95%,
+    rgba(255, 255, 255, 1) 100%
+  );
 }
 
 /* New */
@@ -21,7 +27,6 @@
 
 .firstBlockLeft {
   height: 90vh;
-  /* background-color: greenyellow; */
   display: grid;
   grid-template-rows: 10% 70% 20%;
 }
@@ -31,15 +36,19 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
   line-height: 100%;
   color: #000000;
   padding-top: 20px;
 }
 
+.firstBlockLeft div p {
+  font-size: calc(20px + 1vw);
+}
+
 .firstBlockLeft div:nth-child(2) {
   display: flex;
   align-items: flex-end;
+  margin-bottom: 54px;
 }
 
 .firstBlockLeft div:nth-child(2) p {
@@ -47,9 +56,7 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  font-size: 34px;
   line-height: 100%;
-
   color: #000000;
 }
 
@@ -66,7 +73,6 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  font-size: 30px;
   line-height: 100%;
   color: #000000;
 }
@@ -90,7 +96,6 @@
 
 /* .firstBlockRight div:nth-child(2) { */
 .mainAbstrcImg {
-  /* background-color: #0029ff; */
   background-image: url("../public/About/main1.png");
   background-repeat: no-repeat;
   background-size: contain;
@@ -99,11 +104,19 @@
   aspect-ratio: 4 / 5;
 }
 
-/* .firstBlockRight div:nth-child(2) img{
-  height: 100% !important;
-  width: 100% !important;
+.mainAbstrcImgForMobile {
+  display: none !important;
+  background-image: url("../public/About/main1.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 100%;
+  width: 100%;
+  aspect-ratio: 4 / 5;
+}
 
-} */
+.mainAbstrcImgNOTForMobile{
+  display: inline !important;
+}
 
 .firstBlockRight div:nth-child(2) img {
   height: 100% !important;
@@ -131,7 +144,7 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  font-size: 30px;
+  font-size: calc(17px + 1vw);
   line-height: 100%;
   color: #000000;
 }
@@ -148,10 +161,6 @@
   align-items: flex-end;
 }
 
-.secondBlockRight {
-  font-size: 34px;
-}
-
 .thirdBlock {
   height: 415px;
   border-bottom: 1px solid black;
@@ -163,11 +172,10 @@
   margin: 0 15px 0 15px;
 }
 
-.thirdBlock~.thirdBlock~.thirdBlock {
+.thirdBlock ~ .thirdBlock ~ .thirdBlock {
   height: 250px;
   border-bottom: 0;
 }
-
 
 .thirdBlockTitle {
   display: flex;
@@ -191,22 +199,21 @@
   color: #000000;
 }
 
-.thirdBlockText ul{
+.thirdBlockText ul {
   list-style-type: none;
 }
 
+.linksText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  /* font-size: 34px; */
+  font-size: calc(50px - 1vw);
+  line-height: 100%;
+  text-decoration-line: underline;
 
-.linksText{
-font-family: "Inter";
-font-style: normal;
-font-weight: 400;
-font-size: 34px;
-line-height: 100%;
-text-decoration-line: underline;
-
-color: #000000;
+  color: #000000;
 }
-
 
 /* Old */
 
@@ -214,7 +221,6 @@ color: #000000;
   display: flex;
   border-top: 1px solid black;
   padding: 15px;
-  /* margin-top: 40px; */
   margin: 40px 15px 15px 15px;
 }
 
@@ -307,4 +313,51 @@ color: #000000;
 
 .footer span:nth-child(2) {
   padding-right: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .firstBlock{
+    grid-template-columns: none;
+    grid-template-columns: none;
+    grid-column-gap: none;
+  }
+
+  .worksDetailsText {
+    height: 310px;
+  }
+
+  .thirdBlockText {
+    font-size: calc(7px + 1vw);
+  }
+
+  .secondBlockLeft,
+  .secondBlockRight {
+    font-size: calc(14px + 1vw);
+  }
+
+  .linksText {
+    font-size: calc(25px - 1vw);
+  }
+
+  .mainAbstrcImg{
+    display: none !important;
+  }
+
+  .mainAbstrcImgForMobile {
+    display: inline !important;
+    height: 85%;
+  }
+
+  .firstBlockRight{
+    display: none !important;
+  }
+
+  .firstBlockLeft{
+    grid-template-rows: 10% 55% 20%;
+  }
+
+  .thirdBlock{
+    column-gap: 15px;
+  }
+
 }
